--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,53 +1,48 @@
 name: build
-on: [push, pull_request,workflow_dispatch]
+on: [push, pull_request]
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [windows-latest]
-        build_type: [Release]
-        enable_ui: [on]
-        include:
-          - os: windows-latest
-            build_type: Release
-            enable_ui: on
+    runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
-    - name: ccache
-      uses: hendrikmuhs/ccache-action@v1
-      if: runner.os == 'Linux'
-      with:
-        key: ${{ matrix.os }}-${{ matrix.enable_ui }}
-    - uses: seanmiddleditch/gha-setup-ninja@master
+    - name: Install Skia
+      shell: bash
+      run: |
+        this_dir=$(cygpath "${{ github.workspace }}")
+        skia_url=$(source $this_dir/laf/misc/skia-url.sh | xargs)
+        skia_file=$(basename $skia_url)
+        curl --ssl-revoke-best-effort -L -o "$skia_file" "$skia_url"
+        unzip "$skia_file" -d skia
+    - uses: aseprite/get-ninja@main
     - uses: ilammy/msvc-dev-cmd@v1
-      if: runner.os == 'Windows'
     - name: Generating Makefiles
       shell: bash
       run: |
-        export enable_ccache=off
-        curl -L https://github.com/blueloveTH/aseprite/releases/download/v0.01/skia.zip --output skia.zip
-        curl -L https://github.com/blueloveTH/aseprite/releases/download/v0.01/libcrypto-1_1-x64.dll --output libcrypto-1_1-x64.dll
-        7z x skia.zip
         cmake -S . -B build -G Ninja \
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-          -DENABLE_UI=${{ matrix.enable_ui }} \
-          -DENABLE_CCACHE=$enable_ccache \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DENABLE_TESTS=ON \
+          -DENABLE_SCRIPTING=ON \
+          -DENABLE_CCACHE=off \
           -DLAF_BACKEND=skia \
-          -DSKIA_DIR=./skia \
-          -DSKIA_LIBRARY_DIR=./skia/out/Release-x64 \
-          -DSKIA_LIBRARY=./skia/out/Release-x64/skia.lib
+          -DSKIA_DIR=$(realpath skia) \
+          -DSKIA_LIBRARY_DIR=$(realpath skia/out/Release-x64)
     - name: Compiling
       shell: bash
       run: |
         cd build && ninja
-    - uses: actions/upload-artifact@v4
+    - name: Running Tests
+      shell: bash
+      run: |
+        cd build && ctest --output-on-failure
+        export ASEPRITE=$PWD/build/bin/aseprite.exe
+        cd tests && bash run-tests.sh
+    - name: Upload Build Artifacts
+      uses: actions/upload-artifact@v4
       with:
-        name: aseprite
+        name: aseprite-windows-gui-release
         path: |
-          libcrypto-1_1-x64.dll
-          D:/a/aseprite/aseprite/build/bin/data
-          D:/a/aseprite/aseprite/build/bin/aseprite.exe
+          build/bin/aseprite*
+          build/bin/*.exe
+          build/bin/*.dll
